Implement better limits and errors for api
